styles.css
/* All document */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  /* scroll smoothly via more button */
  scroll-behavior: smooth;
}

body {
  font-family: 'Inter', sans-serif;
  margin: 0%;
  padding: 0%;
}

.wrapper {
  display: flex;
  flex-direction: column;
  margin: 0%;
  padding: 0%;
}

.top-nav {
  display: block;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100vw;
  height: 48px;
  background-color: white;
}

.logo {
  text-decoration: none;
  position: fixed;
  left: 0;
  margin: 10px 24px;
  color: #28352f;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 28px;
}

/* used https://isabelcastillo.com/pure-css-mobile-toggle-menu to guide */
.drop-menu,
#toggle-menu {
  display: none;
}

.top-nav label {
  display: flex;
  text-align: center;
  position: fixed;
  top: 0;
  right: 0;
  width: 24px;
  height: 24px;
  margin: 10px 24px;
}

#toggle-menu:checked + .drop-menu {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 0;
  right: 0;
  left: 0;
  width: 100vw;
  height: 80vh;
  margin-top: 48px;
  padding: 0;
  background-color: white;
  border-radius: 0 0 50px 50px;
  list-style: none;
}

.drop-menu li {
  margin: 40px;
}

.drop-menu a {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #3a4a42;
  text-decoration: none;
}

/*
  ***MAIN PAGE***
*/
.main-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 48px;
  background-image: url(images/header-illsutration-mobile@2x.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

.main-page h1 {
  margin: 64px 24px 58px 24px;
  max-width: 327px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
}

.main-page span { color: #36b37e; }

.main-page p {
  margin: 24px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #172b4d;
}

.nav-bar-bot ul {
  list-style: none;
  padding: 0;
  display: flex;
  width: 50vw;
  max-width: 200px;
  justify-content: space-around;
}

.nav-bar-bot li {
  display: flex;
}

.nav-bar-bot a {
  display: flex;
  align-items: center;
}

#more {
  width: 42px;
  height: 42px;
  margin-top: 64px;
}

#more img {
  padding: 16px 13px;
  border: 1px solid #dfe1e6;
  border-radius: 32px;
}

/*
    ***PROJECT PAGE***
*/

.project-page {
  display: grid;
  flex-direction: column;
  align-items: center;
}

.project-page header {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}

h3 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  text-align: center;
  color: #172b4d;
}

#recent-works { margin: 48px auto 24px auto; }

#separate {
  margin-bottom: 62px;
  width: 48px;
  height: 4px;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, 329px);
  align-content: center;
  justify-content: center;
  gap: 24px;
  margin: 26px;
}

.proj {
  display: flex;
  flex-direction: column;
  width: 329px;
  height: 476px;
  background-image: url(images/Img\ Plaholder\ project.png);
  background-repeat: no-repeat;
  justify-content: flex-end;
}

.proj-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 222px;
  background-color: white;
  border-radius: 8px;
  margin: 1px;
}

.proj-text h4 {
  margin: 16px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #3a4a42;
}

.proj-text ul {
  display: flex;
  list-style: none;
  padding: 0%;
  width: 100%;
  justify-content: space-around;
}

.proj-text li {
  padding: 8px 12px;
  background: #ebf0ee;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
}

button {
  padding: 12px;
  background-color: #36b37f;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #fff;
  margin-bottom: 24px;
}

button:hover {
  cursor: pointer;
  background-color: #36b37f;
  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
}

button:active {
  background-color: #008552;
}

/*
    ***ABOUT PAGE***
*/

.about-page {
  display: grid;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vw;
  background-image: url(images/illustration\ 1-\ about\ me-mobile.svg);
  background-position: top right;
  background-repeat: no-repeat;
}

#main-about {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
  justify-content: center;
  width: 100vw;
  margin: 0%;
  margin-bottom: 33px;
  background-image: url(images/illustration\ 2-about\ me\ mobile.svg);
  background-position: bottom left;
  background-repeat: no-repeat;
}

.about-page h3 {
  margin-top: 56px;
  margin-bottom: 12px;
}

.about-page p {
  margin-top: 0;
  padding: 12px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #42526e;
}

.skill-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, 327px);
  align-content: center;
  justify-content: center;
  gap: 24px;
  margin: 24px;
}

.card {
  display: flex;
  flex-direction: column;
  width: 327px;
  height: 352px;
  background-image: url(images/Img\ Plaholder\ about.png);
  background-repeat: no-repeat;
  align-items: center;
}

.skill-cards img {
  margin: 40px;
  width: 80px;
  height: 80px;
  background-color: white;
  padding: 16px;
  border-radius: 50%;
  box-shadow: 0 16px 24px rgba(37, 47, 137, 0.08);
}

.skill-cards h4 {
  margin: 24px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #344563;
}

.skill-cards ul {
  display: flex;
  list-style: none;
  flex-wrap: wrap;
  padding: 0%;
  margin-bottom: 20px;
  margin-top: 0%;
  width: 100%;
  justify-content: center;
}

.skill-cards li {
  padding: 12px;
  margin: 4px;
  background: #fff;
  border-radius: 8px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #36b37e;
}

/*
  Contact Page
*/

.contact-page {
  display: grid;
  align-items: center;
  background-image: url(images/Frame.svg);
  background-repeat: no-repeat;
  background-position: right bottom;
}

.contact-page h3 {
  margin: 60px 24px;
}

#contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}

#contact-form ul {
  list-style: none;
  width: 100%;
  padding: 0 24px;
}

#contact-form li {
  padding-bottom: 24px;
}

#contact-form input {
  width: 100%;
  border-radius: 4px;
  padding: 15px 16px;
  border: 1px solid #d0d9d4;
}

#comment {
  width: 100%;
  height: 114px;
  border-radius: 4px;
  padding: 12px;
  border: 1px solid #60c095;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #091e42;
}

/*
  Footer
*/

.end-page {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#my-email {
  text-align: center;
  text-decoration: none;
  width: 100%;
  height: 189px;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 32px;
  color: #42526e;
}

#ender {
  margin: 134px auto 8px auto;
}

@media (min-width: 785px) {
  .top-nav {
    display: flex;
    justify-content: center;
    height: 0;
  }

  .logo,
  .top-nav label,
  #toggle-menu {
    display: none;
  }

  .drop-menu {
    display: flex;
    width: auto;
    height: 40px;
    padding: 0;
    list-style: none;
  }

  .drop-menu li {
    display: flex;
    justify-content: center;
    margin: 0;
  }

  .drop-menu a {
    padding: 10px 12px;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
    line-height: 20px;
    text-align: center;
    color: #344563;
    text-decoration: none;
  }

  /*
  ***MAIN PAGE***
  */

  .main-page {
    margin-top: 0;
    background-image: url(images/Header-llustration-desktop@2x.svg);
  }

  .main-page h1 {
    margin: 232px 260px 24px 260px;
    font-weight: 800;
    font-size: 48px;
    line-height: 60px;
    max-width: 920px;
  }

  .main-page p {
    max-width: 920px;
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 28px;
    text-align: center;
    color: #172b4d;
  }

  .nav-bar-bot ul {
    width: 200px;
    justify-content: space-around;
  }

  #more {
    margin-top: 91px;
    margin-bottom: 495px;
  }

  /*
      ***PROJECT PAGE***
  */

  #separate {
    display: none;
  }

  .projects {
    margin-top: 28px;
  }

  /*
    ***ABOUT PAGE***
  */

  .about-page {
    margin-top: 88px;
    background-image: url(images/desktop-about-right.svg);
  }

  #main-about {
    background-image: url(images/illustration-about-me-2-desktop@2x.svg);
    background-position: bottom 29px left;
    margin-bottom: 28px;
  }

  .about-page h3 {
    margin-top: 78px;
    margin-bottom: 24px;
  }

  .about-page p {
    max-width: 920px;
    margin-left: 224px;
    margin-right: 224px;
  }

  .about-page button {
    margin: 0;
  }

  /*
    ***CONTACT PAGE***
  */

  .contact-page {
    grid-template-columns: 1fr 2fr;
    gap: 24px;
    align-items: center;
    width: 100vw;
    padding: 148px 7% 225px 7%;
    background-image: url(images/contact-left-1@2x.svg), url(images/contact-bottom-desktop@2x.svg), url(images/contact-right@2x.svg);
    background-position: bottom left, bottom center, bottom right;
  }

  .contact-page h3 {
    margin: 0 24px 0 0;
  }

  #contact-form {
    width: auto;
    align-items: flex-start;
  }

  #contact-form ul {
    width: 100%;
    padding: 0;
    margin: 0;
  }

  #contact-form button {
    margin: 0;
  }

  /*
    ***FOOTER***
  */

  footer { border-top: 1px solid #dfe1e6; }

  #my-email { display: none; }

  #ender { display: none; }
}

